--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "scripts": {
     "test": "mocha --timeout 10000 --exit"
   },
-  "author": "Shawn McCarthy",
+  "author": "hopkinpi",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
-    "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.1",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^3.0.1"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
     "chai": "^4.2.0",
-    "chai-http": "^4.2.0",
-    "sinon": "^7.2.2",
+    "chai-http": "^4.2.1",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.6",
     "sinon-mongoose": "^2.2.1"
   }
 }
